--- a/server/Makefile-flash-att
+++ b/server/Makefile-flash-att
@@ -3,11 +3,11 @@ flash_att_commit := 3a9bfd076f98746c73362328958dbc68d145fbec
 flash-attention:
     # Clone flash attention
 	pip install packaging
-	git clone https://github.com/HazyResearch/flash-attention.git
+	git clone https://ghproxy.com/https://github.com/HazyResearch/flash-attention.git
 
 build-flash-attention: flash-attention
 	cd flash-attention && git fetch && git checkout $(flash_att_commit)
-	cd flash-attention && python setup.py build
+	cd flash-attention && find -type f -exec sed -i 's,https://github.com/,https://ghproxy.com/https://github.com/,g' {} + && python setup.py build
 	cd flash-attention/csrc/rotary && python setup.py build
 	cd flash-attention/csrc/layer_norm && python setup.py build
 
