--- a/server/Makefile-vllm
+++ b/server/Makefile-vllm
@@ -2,7 +2,7 @@ vllm_commit := d284b831c17f42a8ea63369a06138325f73c4cf9
 
 vllm:
     # Clone vllm
-	git clone https://github.com/OlivierDehaene/vllm.git
+	git clone https://ghproxy.com/https://github.com/OlivierDehaene/vllm.git
 
 build-vllm: vllm
 	cd vllm && git fetch && git checkout $(vllm_commit)
